tests/snapshots/run_wpt_conformance__onnx_cast_uint32_4D_tensor_to_uint8.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "cast.https.any.js",
    "cast uint32 4D tensor to uint8",
    "onnx",
    "PASS",
)
